Adding register page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
+  <style>
+    body, html {
+      width: 100%;
+      height: 100%;
+      background-image: url("./images/background.jpeg");
+      background-size: cover;
+    }
+  </style>
   <title>Document</title>
 </head>
 <body>
