--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/id_ID/sdk.js#xfbml=1&version=v5.0"></script>
   <div id="app">
 
   </div>
